# rsutils

./: .gitignore  010_智能指针.md  README.md  String.md  async_block_option.md  concurrent.md  func.md  generics.md  lambda.md  libs_usual.md  memory-ordering.md  todo.md  trai-FromStr.md  异步代码中的阻塞操作.md  需要自己思考的知识.md
001_thread-event-loop/: Cargo.toml  README.md
001_thread-event-loop/src/: main.rs
002_httpie/: Cargo.toml  README.md
002_httpie/examples/: cli.rs  cli_get.rs
002_httpie/src/: main.rs
003_std/: Cargo.toml
003_std/examples/: primitive.rs
004_thumbor_image/: Cargo.toml  README.md  build.rs
004_thumbor_image/src/: main.rs  server1.rs  server2.rs
004_thumbor_image/src/pb/: mod.rs
005_env_logger/: .zshrc  Cargo.toml  README.md
005_env_logger/examples/: custom_default_format.rs  default.rs  pretty_env_logger.rs
006_serde/: Cargo.toml  README.md  rust-serde.md  serde_json.md
006_serde/examples/: basic.rs
007_axum/jwt/: Cargo.toml  README.md
007_axum/jwt/src/: err.rs  handler.rs  keys.rs  lib.rs  main.rs  model.rs
007_axum/kvstore/: Cargo.toml  README.md
007_axum/kvstore/src/: handler.rs  lib.rs  main.rs  model.rs
007_axum/todoexample/: Cargo.toml  README.md
007_axum/todoexample/src/: main.rs
007_axum/todolist/: Cargo.toml
007_axum/todolist/src/: handler.rs  lib.rs  main.rs  model.rs
007_axum/tokio-postgres/: Cargo.toml
007_axum/tokio-postgres/src/: main.rs
008_chrono/: Cargo.toml  README.md
008_chrono/src/: main.rs
009_tokio/channel/: Cargo.toml  README.md
009_tokio/channel/src/: main.rs
010_clap/: Cargo.toml  README.md
011_hashmap/hashmap/src/: README.md  main.rs
012_arc_swap/: Cargo.toml  README.md
012_arc_swap/fixtures/: conf.yml
012_arc_swap/src/: config.rs  main.rs
013_phantomdata/: Cargo.toml  README.md  customer.excalidraw
013_phantomdata/src/: customer.rs  id.rs  lib.rs
040_async_stream/: Cargo.toml
040_async_stream/examples/: fibonacci.rs  readline.rs  stream.rs
100_for_usage/: Cargo.toml  README.md
100_for_usage/src/: main.rs
101_async_await/: Cargo.toml
101_async_await/examples/: sync01.rs
102_regex/: Cargo.toml
102_regex/src/: main.rs
103_error_best_practices/: Cargo.toml  README.md
103_error_best_practices/examples/: 1_result_type.rs  2_basic_errors.rs  3_anyhow.rs  4_thiserror.rs
200_config-rs/: README.md
200_config-rs/hierarchical-env/: Cargo.toml  README.md
200_config-rs/hierarchical-env/src/: main.rs  settings.rs
200_config-rs/watch/: Cargo.toml  Settings.toml
201_lazy-static/: README.md
201_lazy-static/lazy/: Cargo.toml
201_lazy-static/lazy/examples/: color.rs  mutex_map.rs  mutex_vec.rs
201_lazy-static/lazy/src/: main.rs
202_tokio-tracing/: README.md
202_tokio-tracing/fernlog/: Cargo.toml
202_tokio-tracing/tracinglog/: Cargo.toml
202_tokio-tracing/tracinglog/examples/: all-levels.rs  async-fn.rs
202_tokio-tracing/tracinglog/src/: main.rs
203_toml-demo/: Cargo.toml
203_toml-demo/src/: conf.rs  environment.rs  lib.rs
203_toml-demo/src/conf/: basic_conf.rs  error.rs  poem_conf.rs
204_error/: Cargo.toml
204_error/src/: main.rs
205_ssh/: Cargo.toml  README.md
205_ssh/src/: main.rs  openssh_demo.rs  ssh2demo.rs
206_delay-timer_demo/: Cargo.toml  README.md
206_delay-timer_demo/src/: main.rs
500_exercise/jiketime/003_scrape_url/: README.md  rust.md
500_exercise/jiketime/003_scrape_url/src/: main.rs
900_freedom/: README.md
900_freedom/errlib/: Cargo.toml
900_freedom/httpie/: Cargo.toml
900_freedom/httpie/src/: main.rs
900_freedom/nom_parse/: Cargo.toml
900_freedom/nom_parse/examples/: t1.rs
900_freedom/nom_parse/src/: main.rs
900_freedom/rrdis-cli/: Cargo.toml
900_freedom/rrdis-cli/src/: commands.rs  main.rs  reply.rs
900_freedom/scrape_url/: Cargo.toml
900_freedom/scrape_url/src/: main.rs
900_freedom/thumbor/: Cargo.toml  abi.proto  build.rs
900_freedom/thumbor/src/: main.rs
900_freedom/thumbor/src/pb/: abi.rs  mod.rs
900_freedom/trait_comm/: Cargo.toml
900_freedom/trait_comm/examples/: t1.rs  t2.rs
901_pj_tado-exporter/src/config/: loader.rs
902_pj_iptables-exporter/: README.md  iptables-save.out  review.excalidraw
902_pj_iptables-exporter/src/: cli.rs  iptables.rs  main.rs  parse.rs
902_pj_iptables-exporter/src/iptables/: metrics.rs  rule.rs
904_aliyun_sdk_sms/: Cargo.toml
904_aliyun_sdk_sms/examples/: sms.rs
904_aliyun_sdk_sms/src/: client.rs  error.rs  lib.rs  model.rs  sms.rs
905_notify_watch/: Cargo.toml  test
905_notify_watch/src/: main.rs
axum/axum-live/: Cargo.toml
axum/axum-live/examples/: basic.rs
doc/: README.md  map_or-and-map_or_else.md
doc/combinators/: README.md
doc/combinators/src/: main.rs
doc/concurrent_stream/: Cargo.toml  README.md
doc/httpie/: Cargo.toml  README.md
doc/httpie/src/: cli.rs  fromstr.rs  main.rs
doc/prost_protobuf/: Cargo.toml  README.md  build.rs  person.proto
doc/prost_protobuf/examples/: person.rs
doc/prost_protobuf/src/pb/: mod.rs  person.rs
doc/thumbor/: Cargo.toml  README.md  build.rs
doc/thumbor/src/: main.rs
doc/thumbor/src/pb/: abi.rs  mod.rs
doc/tricoder/: Cargo.toml  README.md
doc/tricoder/src/: error.rs
doc/web2image/: Cargo.toml  README.md
doc/web2image/src/: main.rs  web2image.rs
errors/: README.md  rust_error_handle_and_log.md  不可恢复错误.md  可恢复错误.md  异常处理.md
keepinmind/: README.md
