[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server1"
path = "src/server1.rs"

[[bin]]
name = "server2"
path = "src/server2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
axum = "0.4.6"
base64 = "0.13.0"
bytes = "1.1.0"
image = "0.24.1"
lazy_static = "1.4.0"
lru = "0.7.2"
percent-encoding = "2.1.0"
photon-rs = "0.3.1"
prost = "0.9.0"
reqwest = { version = "0.11.9", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tower = { version = "0.4.12", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.3", features = ["add-extension", "compression-full", "trace"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"

[build-dependencies]
prost-build = "0.8"
