[package]
name = "arcswap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.5.0"
axum = "0.5.0"
serde = {version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.136"
serde_yaml = "0.8.23"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
