[package]
name = "aliyun_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
chrono = "0.4.19"
reqwest = { version = "0.11.9", features = ["json"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.31"
tracing-subscriber = "0.3.9"
url = "2.2.2"
