[package]
name = "tokio-postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
axum = "0.4.8"
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-postgres = "0.7.5"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
