[package]
name = "channel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
rayon = "1.5.1"
tokio = { version = "1.17.0", features = ["full"] }
blake3 = "1"
tokio-util = {version = "0.7.0", features = ["codec"]}
futures = "0.3"
