[package]
name = "tracinglog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-attributes = "0.1.16" # for async-fn example
tokio = { version = "1.1", features = ["full"] } # for async-fn example
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "time", "local-time"] }
time = { version = "0.3.9", features = ["macros"] }
