[package]
name = "prost_protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytes = "1.4.0"
prost = "0.11.8"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"

[build-dependencies]
prost-build = "0.11.8"